--- a/css/styles.css
+++ b/css/styles.css
@@ -478,8 +478,75 @@ body {
   margin-left: 235px;
   padding-bottom: 50px;
   padding-top: 50px;
+  font-size: 20px;
+  width: 70%;
   
+  -webkit-animation: shake-horizontal 7s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+	        animation: shake-horizontal 7s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
 }
+
+@-webkit-keyframes shake-horizontal {
+  0%,
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  10%,
+  30%,
+  50%,
+  70% {
+    -webkit-transform: translateX(-5px);
+            transform: translateX(-5px);
+  }
+  20%,
+  40%,
+  60% {
+    -webkit-transform: translateX(5px);
+            transform: translateX(5px);
+  }
+  80% {
+    -webkit-transform: translateX(5px);
+            transform: translateX(5px);
+  }
+  90% {
+    -webkit-transform: translateX(-5px);
+            transform: translateX(-5px);
+  }
+}
+@keyframes shake-horizontal {
+  0%,
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  10%,
+  30%,
+  50%,
+  70% {
+    -webkit-transform: translateX(-5px);
+            transform: translateX(-5px);
+  }
+  20%,
+  40%,
+  60% {
+    -webkit-transform: translateX(5px);
+            transform: translateX(5px);
+  }
+  80% {
+    -webkit-transform: translateX(5px);
+            transform: translateX(5px);
+  }
+  90% {
+    -webkit-transform: translateX(-5px);
+            transform: translateX(-5px);
+  }
+}
+
+
+
+
+
+
 
 .linkropa {
   color: greenyellow;
@@ -488,8 +555,8 @@ body {
   padding: 2px;
   text-decoration: none;
   transition: 1s;
-  display: flex;
-  width: 25%;
+  display: block;
+  width: 45%;
   margin-top: 10px;
   
 }
@@ -938,6 +1005,35 @@ input, textarea {
   
 }
 
+.linkreturn {
+  /* background-color: aqua; */
+  margin-top: 20px;
+  margin-left: 755px;
+  font-size: 20px; 
+  color: greenyellow;
+  padding: 10px;
+  
+}
+
+
+.linkinicio {
+  color: greenyellow;
+  text-decoration: none;
+  border: 2px solid greenyellow;
+  border-radius: 5px;
+  padding: 10px;
+  transition: 1s;
+}
+
+.linkinicio:hover {
+  background-color: greenyellow;
+  border: 1px solid yellow;
+  color: black;
+}
+
+
+
+
 
 .linea3 {
   background-color: greenyellow;
@@ -952,16 +1048,6 @@ input, textarea {
   width: 40%;
   margin-left: 20px;
 }
-
-select {
-  
-  margin-bottom: 10px;
-  background-color: greenyellow;
-  border: 5px solid greenyellow;
-  border-radius: 5px;
-}
-
-
 
 
 .gridropa {
@@ -1014,10 +1100,20 @@ select {
 
 .descripcionropa {
   border-top: 2px solid greenyellow;
+  
 }
 
 
-
+select {
+  
+  
+  margin-bottom: 10px;
+  
+  background-color: greenyellow;
+  border: 5px solid greenyellow;
+  border-radius: 5px;
+  
+}
 
 
 
@@ -1051,7 +1147,7 @@ select {
   background-color: black;
   position: relative;
   left: 450px;
-  bottom: 10px;
+  bottom: 70px;
   border-radius: 10px;
 }
 
@@ -1239,7 +1335,7 @@ input, textarea {
         
     position: absolute;
     justify-content: center;
-    width: 80%;
+    width: 70%;
         
   }
 
@@ -1260,6 +1356,19 @@ input, textarea {
     margin: 0;
         
   }
+
+  .tituloaccesorios {
+    margin: 10px;
+    width: 100%;
+    /* background-color: aqua; */
+    font-size: 15px;
+  }
+
+  .linkropa {
+    width: 75%;
+  }
+
+
 
   .derechoreservado {
     font-size: 12px;
@@ -1305,7 +1414,7 @@ input, textarea {
   /* CATALOGO */
 
   .titulovehiculos {
-    width: 30%;
+    width: 40%;
     margin-bottom: 15px;
   }
 
@@ -1319,11 +1428,12 @@ input, textarea {
 
   .tituloimgropa {
     margin-left: 20px;
+    width: 60%;
   }
 
   .gridropa {
     grid-template-columns: 200px 200px 200px 200px;
-    grid-template-rows: 250px
+    grid-template-rows: 290px
   }
 
   .imagenes{
@@ -1371,7 +1481,7 @@ input, textarea {
     margin: 0;
     width: 40%;
     margin-left: -350px;
-    margin-top: -70px;
+    margin-top: 10px;
   }
 
   .fieldset2 {
@@ -1500,10 +1610,16 @@ input, textarea {
   
   .cajadescripcionmoto {
     font-size: 15px;
-    padding: 5px;
+    padding: 15px;
     width: 50%;
 
     
+  }
+
+  .linkreturn {
+    margin: 0;
+    margin-top: 20px;
+    margin-left: 250px;
   }
 
   li {
@@ -1513,7 +1629,7 @@ input, textarea {
 
   .gridropa {
     grid-template-columns: 225px 225px ;
-    grid-template-rows: 250px
+    grid-template-rows: 300px
   }
 
 
@@ -1660,6 +1776,10 @@ input, textarea {
 
   /*------CATALOGO----------*/
 
+  .titulovehiculos {
+    width: 60%;
+  }
+
   .cajamoto {
     height: 300px;
   }
@@ -1668,9 +1788,15 @@ input, textarea {
     font-size: 13px;
   }
 
+  .linkreturn {
+    margin: 0;
+    margin-top: 20px;
+    margin-left: 250px;
+  }
+
   .gridropa {
-    grid-template-columns: 225px 225px ;
-    grid-template-rows: 250px
+    grid-template-columns: 250px  ;
+    grid-template-rows: 300px
   }
 
 
