--- a/css/styles.css
+++ b/css/styles.css
@@ -1858,7 +1858,7 @@ input, textarea {
 
   .parrafologo{
     /* background-color: aquamarine; */
-    margin-left:100px;
+    margin-left:89px;
     width: 100%;
     font-size: 13px;
   }
@@ -1874,9 +1874,11 @@ input, textarea {
   }
 
   .tituloimg {
-    font-size: 11px;
+    
     width: 80%;
   }
+
+
 
   .imgindex {
     width: 100%;
@@ -1900,7 +1902,7 @@ input, textarea {
 
   .imgp {
     width: 80%;
-    margin-left: 80px;
+    margin-left: 18px;
     margin-bottom: 20px;
         
         
@@ -1912,7 +1914,7 @@ input, textarea {
   }
 
   .linkimgp {
-    margin-left: 200px;
+    margin-left:12px;
     
   }
 
@@ -1923,6 +1925,13 @@ input, textarea {
     
   /* REGISTRO */
     
+  .tituloregistro {
+    width: 70%;
+  }
+
+  .h2estilo {
+    font-size: 20px;
+  }
 
   .positionfix {
     margin-bottom: 15px;
@@ -1934,7 +1943,7 @@ input, textarea {
   .form1 {
         
         
-    background-color: aqua;
+    /* background-color: aqua; */
     background:linear-gradient(rgba(0, 0, 0, 0.116), rgba(0, 0, 0, 0.11)), url(../img/endurito.jpg) center center no-repeat ;
 
     width: 100%;
@@ -1947,7 +1956,7 @@ input, textarea {
 
   .formregistro1 {
 
-    width: 60%;
+    width: 80%;
     margin-left: -250px;
     margin-top: 350px;
     background-color: rgb(0, 0, 0);
@@ -1958,6 +1967,10 @@ input, textarea {
 
     margin: 0;
 
+  }
+
+  .tienescuentaform1 {
+    font-size: 15px;
   }
     
 
@@ -2006,6 +2019,7 @@ input, textarea {
 
   .titulohistoria {
     margin-top: 40px;
+    font-size: 25px;
   }
 
 
@@ -2024,7 +2038,7 @@ input, textarea {
 
 
 
-@media screen and (min-width: 400px) and (max-width: 600px) {
+@media screen and (max-width: 400px)  {
     
 
    
@@ -2038,12 +2052,13 @@ input, textarea {
   .navbarpadre {
     width: 100%;
     display: flex;
-        
+    margin-left: 17px;   
         
   }
 
   .navbarini {
     font-size: 13px;
+    margin: 3px;
     
   }
 
@@ -2066,8 +2081,8 @@ input, textarea {
 
   .parrafologo{
     /* background-color: aquamarine; */
-    margin-left: 80px;
-    margin-top: 11px;
+    margin-left: 106px;
+    margin-top: -20px;
     width: 100%;
     font-size: 13px;
   }
@@ -2122,7 +2137,7 @@ input, textarea {
   }
 
   .linkimgp {
-    margin-left: 120px;
+    margin-left: 20px;
     
   }
 
@@ -2168,6 +2183,10 @@ input, textarea {
 
     margin: 0;
 
+  }
+
+  .tienescuentaform1 {
+    font-size: 12px;
   }
     
 
@@ -2259,7 +2278,7 @@ input, textarea {
 
   .titulohistoria {
     margin-top: 50px;
-    font-size: 25px;
+    font-size: 20px;
     margin-left: 20px;
   }
 
@@ -2267,7 +2286,7 @@ input, textarea {
     margin: 0;
     margin-left: 10px;
     margin-bottom: 10px;
-    font-size: 22px;
+    font-size: 18px;
   }
 
 
