ultima actualizacion proyecto final

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -39,14 +39,45 @@ body {
 .navbarpadre {
   width: 100%;
 }
-.navbarpadre .navbarini {
+.navbarpadre .menu .navbarini:nth-child(1) {
+  animation-delay: 2s;
+}
+.navbarpadre .menu .navbarini:nth-child(2) {
+  animation-delay: 4s;
+}
+.navbarpadre .menu .navbarini:nth-child(3) {
+  animation-delay: 6s;
+}
+.navbarpadre .menu .navbarini:nth-child(4) {
+  animation-delay: 8s;
+}
+.navbarpadre .menu .navbarini:nth-child(5) {
+  animation-delay: 10s;
+}
+.navbarpadre .menu .navbarini {
   color: greenyellow;
   margin-left: 20px;
   transition: 1s;
   border-radius: 5px;
+  background: linear-gradient(45deg, black, rgba(172, 255, 47, 0.692), black, rgba(172, 255, 47, 0.685));
+  background-size: 400% 400%;
+  animation-name: camibar;
+  animation-iteration-count: infinite;
+  animation-duration: 3s;
+  animation-timing-function: ease;
 }
-.navbarpadre .navbarini:hover {
-  background-color: greenyellow;
+@keyframes camibar {
+  0% {
+    background-position: 0 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0 50%;
+  }
+}
+.navbarpadre .menu .navbarini:hover {
   border: 1px solid yellow;
   color: black;
 }
@@ -1261,6 +1292,31 @@ footer .derechoreservado {
     padding-right: 50px;
   }
 }
+@media screen and (max-width: 500px) {
+  /********CATALOGO*********/
+  .catalogo {
+    flex-direction: column;
+  }
+  .catalogo .cajamoto {
+    height: 300px;
+    width: 100%;
+  }
+  .catalogo .cajamoto .fotomoto {
+    width: 100%;
+  }
+  .catalogo .cajadescripcionmoto {
+    font-size: 13px;
+    width: 100%;
+  }
+  .catalogo .linkreturn {
+    margin: 0;
+    margin-top: 20px;
+    margin-left: 100px;
+  }
+  .catalogo .linkreturn .linkinicio {
+    font-size: 14px;
+  }
+}
 @media screen and (max-width: 400px) {
   .cajaheder {
     margin-bottom: 30px;
@@ -1280,10 +1336,10 @@ footer .derechoreservado {
   }
   .cajaheder .navbarpadre {
     width: 100%;
-    display: flex;
+    font-size: 13px;
     margin-left: 2px;
   }
-  .cajaheder .navbarpadre .navbarini {
+  .cajaheder .navbarpadre .menu {
     font-size: 13px;
   }
   .linea1 {
@@ -1362,15 +1418,20 @@ footer .derechoreservado {
   .titulovehiculos .h2estilo {
     font-size: 18px;
   }
+  .catalogo {
+    flex-direction: column;
+  }
   .catalogo .cajamoto {
     height: 300px;
+    width: 100%;
   }
   .catalogo .cajamoto .fotomoto {
     width: 100%;
     margin-top: 80px;
   }
   .catalogo .cajadescripcionmoto {
-    font-size: 11px;
+    font-size: 13px;
+    width: 100%;
   }
   .catalogo .linkreturn {
     margin: 0;
@@ -1384,7 +1445,7 @@ footer .derechoreservado {
     width: 90%;
   }
   .gridropa {
-    grid-template-columns: 200px;
+    grid-template-columns: 275px;
     grid-template-rows: 393px;
   }
   .gridropa .cajaropa .descripcionropa {
